# virusSim

./: pyproject.toml
tests/: test_virussim.py
virussim/: main.py
