[tool.poetry]
name = "virusSim"
version = "0.1.0"
description = ""
authors = ["Beomus <trunghau60@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
matplotlib = "^3.5.0"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
